# conway

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  clean.sh
src/: main.cpp
